# GraspPicture

./: .gitignore  CMakeLists.txt  LICENSE  README.md  grasp.cpp  grasp.h  line.cpp  line.h  main  main.cpp  slic.cpp  slic.h  spxl_and_saliency.txt
